--- a/scripts/human-thymus/03_HumanDataLaurent.Rmd
+++ b/scripts/human-thymus/03_HumanDataLaurent.Rmd
@@ -120,3 +120,139 @@ makeShinyApp(seur.human, scConf, gene.mapping = FALSE,
              shiny.dir="shinyAppHumanGapinData/") 
 ```
 
+
+
+## 4. Investigate PLZF expression
+
+```{r recluster-clust12}
+DimPlot(seur.human, group.by="new_clusters", pt.size = 0.1, label = T)+
+  scale_color_manual(values=rev(colorRampPalette(RColorBrewer::brewer.pal(12, "Paired"))(18)))
+
+head(seur.human@meta.data)
+
+# keep only NKT cells
+seur.nkt <- subset(seur.human, subset= cell.ident=="NKT")
+# keep only NKT cells from cluster 12/8
+seur.nkt12 <- subset(seur.nkt, subset= new_clusters%in%c(8,12))
+# look at PCA
+DimPlot(seur.nkt12, reduction = "pca", group.by = "new_clusters")
+
+seur.nkt12.new <- RunUMAP(object = seur.nkt12, assay = "SCT", reduction = "harmony", dims = 1:20, verbose=F, seed.use = 42)
+seur.nkt12.new <- FindNeighbors(object = seur.nkt12.new, assay = "SCT", reduction = "harmony", dims = 1:20, verbose=F) %>%
+  FindClusters(resolution = 0.5, verbose=F, random.seed=123)
+colnames(seur.nkt12.new@meta.data)
+
+# Compare
+a <- DimPlot(seur.nkt12, reduction = "umap", group.by = "new_clusters") + ggtitle("iNKT cells clusters 8/12") | FeaturePlot(seur.nkt12, features="ZBTB16", order=T)
+b <- DimPlot(seur.nkt12.new, reduction = "umap", group.by = "SCT_snn_res.0.5") + ggtitle("Reclustering") | FeaturePlot(seur.nkt12.new, features="ZBTB16", order=T)
+ggpubr::ggarrange(a,b, nrow=2)
+# ggsave("~/Projects/20220809_Thymic-iNKT-CrossSpecies/data/06_HumanData/hu_umap_iNKT_clust12_recluster.jpeg", width=10, height=9)
+
+# Explore PCA
+# FeaturePlot(seur.nkt12.new, features="ZBTB16", order=T, reduction="pca", dims=c(1,2))
+# DimPlot(seur.human, reduction = "pca", group.by = "new_clusters", dims=c(5,3), label=T)
+```
+
+
+## 5. Overlap iNKT clusters from cross-species analysis to the big cluster
+
+```{r overlap-inkt-mnn}
+# Visualize iNKT thymic data (from script 01_HumanData_SCT-Harmony.Rmd)
+DimPlot(seur.mnn, pt.size = 0.1, label = T, label.size = 7) + ggtitle("LogNormalize + fastMNN") + theme(legend.position="none")
+
+# Rename seurat_clusters
+colnames(seur.mnn@meta.data)[6] <- "nkt_clusters"
+# Sanity check
+table(rownames(seur.mnn@meta.data) %in% rownames(seur.human@meta.data))
+table(rownames(seur.human@meta.data[seur.human@meta.data$group.ident=="NKT_Thymus",]) %in% rownames(seur.mnn@meta.data))
+seur.mnn@meta.data %>%
+  rownames_to_column("rownames") %>%
+  filter(rownames %in% rownames(seur.human@meta.data))
+
+# Add nkt_clusters information to seur.human@meta.data
+meta <- merge(seur.human@meta.data, seur.mnn@meta.data[,c("orig.ident", "nkt_clusters")], by=c("row.names", "orig.ident"), all.y=FALSE, all.x=TRUE)
+rownames(meta) <- meta$Row.names
+meta$Row.names <- NULL
+# Sanity check
+# meta %>%
+#   filter(group.ident=="NKT_Thymus")
+seur.human@meta.data <- meta
+
+
+# Plot
+DimPlot(subset(seur.human, subset= group.ident=="NKT_Thymus"), pt.size = 0.1, label = T, group.by="nkt_clusters")+
+  ggtitle("Thymic iNKT cells")
+
+table(seur.human@meta.data$nkt_clusters)
+
+nktlist <- list()
+for(i in 0:6){
+  print(i)
+  print(length(rownames(seur.human@meta.data %>% filter(nkt_clusters==i))))
+  nktlist[[i+1]] <- rownames(seur.human@meta.data %>% filter(nkt_clusters==i))
+}
+
+DimPlot(seur.human, pt.size = 0.1, label = T, group.by="nkt_clusters", cells.highlight=nktlist,
+        # cols.highlight=RColorBrewer::brewer.pal(7,"Paired"),
+        cols.highlight=c("#df65b0", "#9e9ac8", "#6baed6", "#1d91c0", "#74c476", "#fec44f", "#de2d26"),
+        cols="#f0f0f0", sizes.highlight = 0.1)+
+  theme(legend.position="none")+
+  ggtitle("Thymic iNKT cells - Clustering on NKT cells only")
+# ggsave("~/Projects/20220809_Thymic-iNKT-CrossSpecies/data/04_HumanNKTdata/hu_fullumap_nktclusters.jpeg", width=5, height=5)
+
+```
+
+```{r overlap-inkt-harmony}
+DimPlot(filtered_seurat_Harmony, group.by = c("seurat_clusters"),
+              pt.size = 1, 
+              ncol = 1, 
+              label = TRUE, label.size = 6) + NoLegend()
+
+# Rename seurat_clusters
+colnames(filtered_seurat_Harmony@meta.data)[8] <- "nkt_clusters_harmony"
+# Sanity check
+# table(rownames(filtered_seurat_Harmony@meta.data) %in% rownames(seur.human@meta.data))
+# table(rownames(seur.human@meta.data[seur.human@meta.data$group.ident=="NKT_Thymus",]) %in% rownames(filtered_seurat_Harmony@meta.data))
+
+
+# Add nkt_clusters information to seur.human@meta.data
+meta <- merge(seur.human@meta.data, filtered_seurat_Harmony@meta.data[,c("orig.ident", "nkt_clusters_harmony")], by=c("row.names", "orig.ident"), all.y=FALSE, all.x=TRUE)
+rownames(meta) <- meta$Row.names
+meta$Row.names <- NULL
+# Sanity check
+meta %>%
+  filter(group.ident=="NKT_Thymus")
+seur.human@meta.data <- meta
+
+# Plot
+DimPlot(subset(seur.human, subset= group.ident=="NKT_Thymus"), pt.size = 0.1, label = T, group.by="nkt_clusters_harmony")+
+  ggtitle("Thymic iNKT cells")
+
+# Get list of cells in each cluster
+table(seur.human@meta.data$nkt_clusters_harmony)
+
+nktlist <- list()
+for(i in 0:7){
+  print(i)
+  print(length(rownames(seur.human@meta.data %>% filter(nkt_clusters_harmony==i))))
+  nktlist[[i+1]] <- rownames(seur.human@meta.data %>% filter(nkt_clusters_harmony==i))
+}
+
+DimPlot(seur.human, pt.size = 0.1, label = T, group.by="nkt_clusters_harmony", cells.highlight=nktlist,
+        # cols.highlight=RColorBrewer::brewer.pal(8,"Paired"),
+        cols.highlight=c("#fd8d3c", #0
+                         "#fec44f", #1
+                         "#de2d26", #2
+                         "#fa9fb5", #3
+                         "#31a354", #4
+                         "#a1d99b", #5
+                         "#3182bd", #6
+                         "#9ecae1"),#7
+        cols="#f0f0f0", sizes.highlight = 0.1)+
+  theme(legend.position="none")+
+  ggtitle("Thymic iNKT cells - Clustering on NKT cells only")
+ggsave("~/Projects/20220809_Thymic-iNKT-CrossSpecies/data/04_HumanNKTdata/hu_fullumap_nktclusters_harmony.jpeg", width=5, height=5)
+
+```
+
+
